Generified some types